# internal/tryout/handler.go
@@ -10,6 +10,13 @@ type Handler struct {
 	Service *Service
 }
 
+
+
+/* ========================================================================== */
+/*                  //SECTION - ENDPOINT LIST TRYOUT SECTION                  */
+/* ========================================================================== */
+
+//ANCHOR - GET TRYOUT PESERTA
 // GetTryoutPeserta godoc
 // @Summary Get tryout peserta
 // @Description Get list tryout berdasarkan kelas peserta
@@ -34,6 +41,7 @@ func (h *Handler) GetTryoutPeserta(c *fiber.Ctx) error {
 }
 
 
+//ANCHOR - START TRYOUT
 // StartTryout godoc
 // @Summary Start tryout
 // @Description Memulai tryout peserta
@@ -61,6 +69,7 @@ func (h *Handler) StartTryout(c *fiber.Ctx) error {
 }
 
 
+//ANCHOR - GET SOAL TRYOUT
 // GetSoalTryout godoc
 // @Summary Get soal tryout
 // @Description Ambil semua soal untuk attempt
@@ -90,7 +99,7 @@ func (h *Handler) GetSoalTryout(c *fiber.Ctx) error {
 }
 
 
-
+//ANCHOR - SAVE ANSWERS
 // SaveAnswers godoc
 // @Summary Autosave jawaban tryout
 // @Description Menyimpan jawaban peserta secara berkala
@@ -130,6 +139,7 @@ func (h *Handler) SaveAnswers(c *fiber.Ctx) error {
 }
 
 
+//ANCHOR - SUBMIT TRYOUT
 // SubmitTryout godoc
 // @Summary Submit tryout
 // @Description Submit hasil tryout peserta
@@ -153,6 +163,7 @@ func (h *Handler) SubmitTryout(c *fiber.Ctx) error {
 }
 
 
+//ANCHOR - RESUME TRYOUT
 // ResumeTryout godoc
 // @Summary Resume tryout
 // @Description Melanjutkan attempt yang sedang berjalan
@@ -179,8 +190,14 @@ func (h *Handler) ResumeTryout(c *fiber.Ctx) error {
 
 	return response.Success(c, data)
 }
+/* =========================== //!SECTION - TRYOUT ========================== */
 
 
+/* ========================================================================== */
+/*                  //SECTION - ENDPOINT LIST REPORT SECTION                  */
+/* ========================================================================== */
+
+//ANCHOR - GET REPORTS
 // GetReports godoc
 // @Summary Get laporan tryout
 // @Tags Tryout
@@ -198,7 +215,7 @@ func (h *Handler) GetReports(c *fiber.Ctx) error {
 	return response.Success(c, data)
 }
 
-
+//ANCHOR - GET REVIEW
 // GetReview godoc
 // @Summary Get pembahasan tryout
 // @Tags Tryout
@@ -217,3 +234,307 @@ func (h *Handler) GetReview(c *fiber.Ctx) error {
 
 	return response.Success(c, data)
 }
+/* =========================== //!SECTION - REPORT ========================== */
+
+
+/* ========================================================================== */
+/*                //SECTION - ENDPOINT LIST LEADERBOARD SECTION               */
+/* ========================================================================== */
+
+//ANCHOR - GLOBAL LEADERBOARD
+// GetGlobalLeaderboard godoc
+// @Summary Get global leaderboard
+// @Description Leaderboard seluruh peserta berdasarkan tryout
+// @Tags Tryout
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Param id_tryout path int true "ID Tryout"
+// @Router /tryout/{id_tryout}/leaderboard [get]
+func (h *Handler) GetGlobalLeaderboard(c *fiber.Ctx) error {
+
+	userID := c.Locals("sub").(int)
+
+	tryoutID, err := c.ParamsInt("id_tryout")
+	if err != nil {
+		return response.Error(
+			c,
+			400,
+			"invalid tryout id",
+			"BAD_REQUEST",
+			nil,
+		)
+	}
+
+	data, err := h.Service.GetGlobalLeaderboard(
+		c.Context(),
+		userID,
+		tryoutID,
+	)
+
+	if err != nil {
+		return response.Error(
+			c,
+			500,
+			err.Error(),
+			"INTERNAL_ERROR",
+			nil,
+		)
+	}
+
+	return response.Success(c, data)
+}
+
+
+//ANCHOR - CLASS LEADERBOARD
+// GetClassLeaderboard godoc
+// @Summary Get class leaderboard
+// @Description Leaderboard berdasarkan kelas
+// @Tags Tryout
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Param id_tryout path int true "ID Tryout"
+// @Param class_id query int false "Class ID (Admin & Mentor only)"
+// @Router /tryout/{id_tryout}/leaderboard/class [get]
+func (h *Handler) GetClassLeaderboard(c *fiber.Ctx) error {
+
+	userID := c.Locals("sub").(int)
+	role := c.Locals("role").(string)
+
+	tryoutID, err := c.ParamsInt("id_tryout")
+	if err != nil {
+		return response.Error(
+			c,
+			400,
+			"invalid tryout id",
+			"BAD_REQUEST",
+			nil,
+		)
+	}
+
+	// optional (hanya digunakan admin & mentor)
+	classID := c.QueryInt("class_id")
+
+	data, err := h.Service.GetClassLeaderboard(
+		c.Context(),
+		userID,
+		role,
+		tryoutID,
+		classID,
+	)
+
+	if err != nil {
+		return response.Error(
+			c,
+			400,
+			err.Error(),
+			"BAD_REQUEST",
+			nil,
+		)
+	}
+
+	return response.Success(c, data)
+}
+/* ======================== //!SECTION - LEADERBOARD ======================== */
+
+
+
+/* ========================================================================== */
+/*                 //SECTION - ENDPOINT LIST ANALYTICS SECTION                */
+/* ========================================================================== */
+
+//ANCHOR - ANALYTICS
+// GetStatistics godoc
+// @Summary Get tryout statistics
+// @Description Statistik tryout (global / class)
+// @Tags Tryout
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Param id_tryout path int true "ID Tryout"
+// @Param class_id query int false "Class ID (Admin & Mentor only)"
+// @Router /tryout/{id_tryout}/statistics [get]
+func (h *Handler) GetStatistics(c *fiber.Ctx) error {
+
+	userID := c.Locals("sub").(int)
+	role := c.Locals("role").(string)
+
+	tryoutID, err := c.ParamsInt("id_tryout")
+	if err != nil {
+		return response.Error(
+			c,
+			400,
+			"invalid tryout id",
+			"BAD_REQUEST",
+			nil,
+		)
+	}
+
+	classID := c.QueryInt("class_id")
+
+	data, err := h.Service.GetStatistics(
+		c.Context(),
+		userID,
+		role,
+		tryoutID,
+		classID,
+	)
+	if err != nil {
+		return response.Error(
+			c,
+			500,
+			err.Error(),
+			"INTERNAL_ERROR",
+			nil,
+		)
+	}
+
+	return response.Success(c, data)
+}
+
+//ANCHOR - GET DISTRIBUTION
+// GetDistribution godoc
+// @Summary Get score distribution
+// @Description Distribusi nilai tryout
+// @Tags Tryout
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Param id_tryout path int true "ID Tryout"
+// @Param class_id query int false "Class ID"
+// @Router /tryout/{id_tryout}/distribution [get]
+func (h *Handler) GetDistribution(c *fiber.Ctx) error {
+
+	userID := c.Locals("sub").(int)
+	role := c.Locals("role").(string)
+
+	tryoutID, err := c.ParamsInt("id_tryout")
+	if err != nil {
+		return response.Error(c, 400, "invalid tryout id", "BAD_REQUEST", nil)
+	}
+
+	classID := c.QueryInt("class_id")
+
+	data, err := h.Service.GetDistribution(
+		c.Context(),
+		userID,
+		role,
+		tryoutID,
+		classID,
+	)
+
+	if err != nil {
+		return response.Error(c, 500, err.Error(), "INTERNAL_ERROR", nil)
+	}
+
+	return response.Success(c, data)
+}
+
+
+//ANCHOR - GET QUESTION ANALYSIS
+// GetQuestionAnalysis godoc
+// @Summary Get question analysis
+// @Description Get analysis for each question in a tryout
+// @Tags Tryout
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Param id_tryout path int true "Tryout ID"
+// @Param class_id query int false "Class ID (optional for admin & mentor)"
+// @Param sort query string false "Sort: default | hardest | easiest"
+// @Router /tryout/{id_tryout}/questions [get]
+func (h *Handler) GetQuestionAnalysis(c *fiber.Ctx) error {
+
+	userID := c.Locals("sub").(int)
+	role := c.Locals("role").(string)
+
+	tryoutID, err := c.ParamsInt("id_tryout")
+	if err != nil {
+		return response.Error(
+			c,
+			400,
+			"invalid tryout id",
+			"BAD_REQUEST",
+			nil,
+		)
+	}
+
+	// optional
+	classID := c.QueryInt("class_id")
+
+	// optional
+	sortBy := c.Query("sort", "default")
+
+	data, err := h.Service.GetQuestionAnalysis(
+		c.Context(),
+		userID,
+		role,
+		tryoutID,
+		classID,
+		sortBy,
+	)
+	if err != nil {
+		return response.Error(
+			c,
+			500,
+			err.Error(),
+			"INTERNAL_ERROR",
+			nil,
+		)
+	}
+
+	return response.Success(c, data)
+}
+
+
+//ANCHOR - GET QUESTION CHOICE ANALYSIS
+// GetQuestionChoices godoc
+// @Summary Get question choice analysis
+// @Description Get answer distribution for a question
+// @Tags Tryout
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Param id_soal path int true "Question ID"
+// @Param class_id query int false "Class ID (Optional for admin & mentor)"
+// @Router /tryout/question/{id_soal}/choices [get]
+func (h *Handler) GetQuestionChoices(c *fiber.Ctx) error {
+
+	userID := c.Locals("sub").(int)
+	role := c.Locals("role").(string)
+
+	questionID, err := c.ParamsInt("id_soal")
+	if err != nil {
+		return response.Error(
+			c,
+			400,
+			"invalid question id",
+			"BAD_REQUEST",
+			nil,
+		)
+	}
+
+	// optional
+	classID := c.QueryInt("class_id")
+
+	data, err := h.Service.GetQuestionChoices(
+		c.Context(),
+		userID,
+		role,
+		questionID,
+		classID,
+	)
+	if err != nil {
+		return response.Error(
+			c,
+			500,
+			err.Error(),
+			"INTERNAL_ERROR",
+			nil,
+		)
+	}
+
+	return response.Success(c, data)
+}
+/* ========================= //!SECTION - ANALYTICS ========================= */
