# internal/tryout/route.go
@@ -14,4 +14,10 @@ func RegisterRoutes(r fiber.Router, handler *Handler) {
 	tryout.Get("/attempt/:attempt_token/resume", handler.ResumeTryout)
 	tryout.Get("/report", handler.GetReports)
 	tryout.Get("/report/:attempt_token", handler.GetReview)
+	tryout.Get("/:id_tryout/leaderboard", handler.GetGlobalLeaderboard)
+	tryout.Get("/:id_tryout/leaderboard/class", handler.GetClassLeaderboard)
+	tryout.Get("/:id_tryout/statistics", handler.GetStatistics)
+	tryout.Get("/:id_tryout/distribution", handler.GetDistribution)
+	tryout.Get("/:id_tryout/questions", handler.GetQuestionAnalysis)
+	tryout.Get("/question/:id_soal/choices", handler.GetQuestionChoices)
 }
